Fix a11y issue 03' about overlapping text when forcing more extra text spacing for civio/presupuesto-management#1126

--- a/budget_app/static/stylesheets/modules/data-controllers.scss
+++ b/budget_app/static/stylesheets/modules/data-controllers.scss
@@ -10,6 +10,7 @@
 
   .quantity-selection{
     margin-left: 55px;
+    margin-top: 30px;
   }
 
   .layout-slider{
@@ -114,7 +115,7 @@
   .chart-embed-btn span{
     display: block;
     position: absolute;
-    top: 46px;
+    top: 80px;
     left: 0;
     width: 34px;
     height: 34px;
